# tufup-example

./: .gitignore  README.md  add_bundle_to_repo.py  add_target_to_repo.py  create_pyinstaller_bundle.bat  create_pyinstaller_bundle_mac.sh  create_pyinstaller_bundle_win.bat  dev-requirements.txt  init_repo.py  main.spec  pyproject.toml  repo_add_bundle.py  repo_init.py  repo_revoke_key.py  repo_settings.py  requirements-dev.txt  requirements.txt  revoke_repo_key.py  setup.py  setup_env.py  setup_repo.bat  test_update_cycle.ps1
.github/workflows/: test-update-cycle.yml
src/: main.py
src/customdiff/: __init__.py
src/customdiff/hdiffpatch_v4.12.0/: readme.md
src/customdiff/hdiffpatch_v4.12.0/linux64/: hdiffz  hpatchz
src/customdiff/hdiffpatch_v4.12.0/macos/: hdiffz  hpatchz
src/myapp/: __init__.py  settings.py
