[build-system]
requires = ["setuptools>=61.0.0", "cx_Freeze>=8.3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tufup-msi-example"
dynamic = ["version"]  # Version will be set dynamically
description = "Example of a self-updating MSI application using tufup"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "tufup==0.9.0",
    "cx_Freeze==8.3.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["myapp"]

[tool.setuptools.dynamic]
version = {attr = "myapp.settings.APP_VERSION"} 